Implemented user details update and fetch api
